--- a/index.html
+++ b/index.html
@@ -8,34 +8,19 @@
 </head>
 <body>
 	<header>
-		<h1>Hannah's Homepage</h1>
+		<h1>Hannah's Homepage!!!</h1>
 	</header>
-	<nav>
-		<ul>
-			<li><a href="about.html">about</a></li>
-			<li><a href="#">link</a></li>
-			<li><a href="#">link</a></li>
-		</ul>
-	</nav>
 	<main>
 		<section>
 			<h2>Projects</h2>
 			<!-- ul stands for unordered list-->
 			<ul>
 				<!-- li stands for list item-->
-				<li><a href="#">Project One - Different types of poop</a></li>
-				<li><a href="#">Project Two - Red Fox Bar</a></li>
-				<li><a href="#">Project Three</a></li>
+				<li><a href="https://hannahashleygill.github.io/project-one-template/">Project One: Distilling Spirits</a></li>
+				<li><a href="https://hannahashleygill.github.io/Happy-Rock-Dental/">Project Two: Happy Rock Dental</a></li>
+
 			</ul>
 		</section>
-		<aside>
-			<h2>Useful Links</h2>
-			<ul>
-				<li><a href="#">link</a></li>
-				<li><a href="#">link</a></li>
-				<li><a href="#">link</a></li>
-			</ul>
-		</aside>
 	</main>
 	<footer>
 		<p>&copy; Hannah 2019</p>
